Updated config and instantiation functionality

--- a/Config.properties
+++ b/Config.properties
@@ -3,8 +3,8 @@
 # Tier may be prod or production / dev / qa / pr or pristine
 tier=prod
 
-# Browser
-browser=chrome
+# Browser may be android-chrome / android-firefox
+browser=android-chrome
 
 # Selenium Server: this could be local or depending on
 seleniumserver=local
@@ -15,9 +15,14 @@ seleniumserverhost=http://10.0.9.251:4444/wd/hub
 # Timeout is used to define implicit wait time i.e. global wait time in seconds for page elements
 timeout=60
 
+# Appium Server
+appiumServer = http://127.0.0.1:4723/wd/hub
+
 # Driver Path
 driverpath=/home/abdullatasleem/Downloads/chromedriver
 # driverpath=src/test/resources/drivers/chromedriver.exe
+
+app_file_path=src/test/resources/ApkFile/Browser.apk
 
 # Take Screenshot, put value as yes or no (default) and provide a path to save screenshots
 take-screenshot=yes
